--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.25.0",
 		"http-proxy-middleware": "^2.0.3",
+		"nodemon": "^2.0.15",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "5.0.0",
+		"socket.io": "^4.4.1",
+		"socket.io-client": "^4.4.1",
 		"timeago.js": "^4.0.2",
 		"web-vitals": "^2.1.4"
 	},
